--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,6 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                </executions>
-                <executions>
                     <execution>
                         <id>check</id>
                         <goals>
@@ -66,7 +64,7 @@
                         <rule>
                             <limits>
                                 <limit>
-                                    <counter>INSTRUCTION</counter>
+                                    <counter>LINE</counter>
                                     <value>COVEREDRATIO</value>
                                     <minimum>100%</minimum>
                                 </limit>
